dernière modif du code avant complexification

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
 
     .section{padding:40px 0}
     .card{border:1px solid #e5e7eb;border-radius:16px;padding:18px;background-color:#fafafa}
-    .gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-    .gallery img{width:100%;height:auto;border-radius:12px;border:1px solid #e5e7eb}
     .badge{display:inline-block;background:var(--eco);color:#0a0a0a;border-radius:999px;padding:4px 10px;font-weight:600}
 
 
@@ -158,7 +156,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 
 
-<!-- SEO JSON-LD enrichi (bilingue FR/EN, précommande) -->
+<!-- SEO JSON-LD enrichi (Produits FR/EN + Organisation SKIMSTONES) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -171,7 +169,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
       "category": "Home & Garden > Household Supplies > Recycling",
       "description": "Compacteur manuel pour bouteilles plastiques (jusqu’à 1,5 L) et canettes. Zéro énergie, éco-conçu en ABS recyclé avec pièces métalliques durables. Design breveté, fabrication responsable au Maroc. Disponible en précommande.",
       "material": "ABS recyclé et métal durable",
-      "image": "https://www.skimstones.com/sqweezy-product.png",
+      "image": "https://www.skimstones.com/alu-detoure.png",
       "logo": "https://www.skimstones.com/LOGODEF-SQWEEZY1.png",
       "url": "https://www.skimstones.com/",
       "countryOfOrigin": "MA",
@@ -212,7 +210,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
       "category": "Home & Garden > Household Supplies > Recycling",
       "description": "Manual compactor for plastic bottles (up to 1.5 L) and aluminum cans. Energy-free, eco-designed in recycled ABS with durable metal parts. Patented design, responsibly manufactured in Morocco. Available for pre-order.",
       "material": "Recycled ABS and durable metal",
-      "image": "https://www.skimstones.com/sqweezy-product.png",
+      "image": "https://www.skimstones.com/alu-detoure.png",
       "logo": "https://www.skimstones.com/LOGODEF-SQWEEZY1.png",
       "url": "https://www.skimstones.com/",
       "countryOfOrigin": "MA",
@@ -244,12 +242,32 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
           "description": "Recommended retail price €29.99 excl. VAT (pre-order)"
         }
       }
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://www.skimstones.com/#organization",
+      "name": "SKIMSTONES",
+      "url": "https://www.skimstones.com/",
+      "logo": "https://www.skimstones.com/LOGODEF-SQWEEZY1.png",
+      "foundingDate": "2024-01-01",
+      "founder": "SKIMSTONES SARL",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "7, Rue Moulay Rachid, appt n°10, Hassan",
+        "addressLocality": "Rabat",
+        "addressCountry": "MA"
+      },
+      "email": "contact@skimstones.com",
+      "sameAs": [
+        "https://www.linkedin.com/company/sqweezy/",
+        "https://www.youtube.com/channel/UCOZaGsu-by54IVT-iuHApVg"
+      ]
     }
   ]
 }
 </script>
 
-  </script>
+
 </head>
 <body>
   <header>
@@ -341,7 +359,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
         <div class="why-card why4"><b>Patented design</b>Smooth vertical compression, low effort, all common formats.</div>
         <div class="why-card why5"><b>Lightweight, Compact, Stable and Portable</b>Keep it beside your recycling bins, even in small spaces.</div>
         <div class="why-card why6"><b>Eco-designed</b>Recycled ABS and durable metal parts, CE-certified.</div>
-        <div class="why-card why7"><b>Compatibility to all common sizes</b>From 330 ml cans to 1.5 L bottles — one simple press.</div>
+        <div class="why-card why7"><b>Compatible with all common sizes</b>From 330 ml cans to 1.5 L bottles — one simple press.</div>
         <div class="why-card why8"><b>Fun to use</b>A simple, engaging reflex the whole family adopts, including children!</div>
        <div class="why-card why9"><b>Fewer collections and savings for the community</b>On a large scale, e.g. 100,000 households, SQWEEZY generates over €5 M in annual savings and prevents more than 5,000 tons of CO₂ emissions.</div>
       </div>
@@ -398,7 +416,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
             <ul class="lang-en">
   
               <li>Max Height: H1= 78.9 cm (nominal), H2= 42.5 cm (pressed)</li>
-              <li>Foot pedal Height : h1= 27 cm (nominal), h2= 7,8 cm (pressed)</li>
+              <li>Foot Pedal Height: h1= 27 cm (nominal), h2= 7.8 cm (pressed)</li>
               <li>Base diameter: D= 20 cm</li>
               <li>Materials: 100% premium recycled ABS ; stainless steel rods ; metal screws</li>
             </ul>
@@ -406,13 +424,13 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
           <div>
             <ul class="lang-fr">
               <li>Poids net : ± 1,8 kg</li>
-              <li>Kit à assembler (outil inclus) en 5 minutes</li>
+              <li>Kit à assembler (outils inclus) en 5 minutes</li>
               <li>Dimensions emballage : 44 × 21 × 17 cm</li>
               <li>Certification CE</li>
             </ul>
             <ul class="lang-en">
               <li>Net weight: ± 1.8 kg</li>
-              <li>Flat-pack kit (tool included) in 5 minutes</li>
+              <li>Flat-pack kit (tools included) in 5 minutes</li>
               <li>Box dimensions: 44 × 21 × 17 cm</li>
               <li>CE certified</li>
             </ul>
