--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
       .hero .badge{
         display:inline-block;
         margin-top:0;           /* colle au haut du bloc hero */
-        margin-bottom:5px;     /* espace raisonnable avant le h1 */
-        font-size:13px;         /* (option) badge un chouïa plus discret */
+        margin-bottom:10px;     /* espace raisonnable avant le h1 */
+        font: size 14px;         /* (option) badge un chouïa plus discret */
       }
 
   </style>
