--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
         font: size 14px;         /* (option) badge un chouïa plus discret */
       }
 
+      /* Arrière plan du site */
+            body {
+        background: linear-gradient(135deg, #ffffff 0%, #f3f9fb 40%, #fdfdfd 100%);
+      }
+
+
   </style>
 
   <script>
