fignolage arrière plan

--- a/index.html
+++ b/index.html
@@ -153,9 +153,11 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
       }
 
       /* Arrière plan du site */
-            body {
+      body {
         background: linear-gradient(135deg, #ffffff 0%, #f3f9fb 40%, #fdfdfd 100%);
+        background-attachment: fixed;  /* option : le gradient reste fixe pendant le scroll */
       }
+
 
 
   </style>
