--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Découvrez SQWEEZY, le compacteur éco-conçu par SKIMSTONES pour écraser bouteilles plastiques et canettes – simple, pratique, ludique, sans énergie. / Discover SQWEEZY, the smart, energy-free home compactor for plastic bottles and cans." />
   <link rel="icon" type="image/x-icon" href="/flavico.ico"/>
  <style>
-    /* Polices charte */
+    /* Polices chartes */
     @font-face { font-family: 'Gadugi'; src: local('Gadugi'), local('Gadugi-Regular'); }
     @font-face { font-family: 'Candara'; src: local('Candara'), local('Candara'); }
 
@@ -659,3 +659,4 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
