squeezy-2.gif in index

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
     </div>
       <div>
         <!-- Remplacer par une photo détourée .png -->
-        <img src="/animated-squeezy.gif" alt="Photo du produit SQWEEZY" style="width:50%;border-radius:16px;border:1px solid #e5e7eb" />
+        <img src="/squeezy-2.gif" alt="Photo du produit SQWEEZY" style="width:50%;border-radius:16px;border:1px solid #e5e7eb" />
       </div>
 
    </section>
@@ -659,5 +659,6 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
