--- a/index.html
+++ b/index.html
@@ -491,10 +491,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
         <h3 style="margin-bottom:12px">Découvrez SQWEEZY en un clin d’œil !</h3>
         <a href="/FR%20TEASER%20DEF.pdf#zoom=100" target="_blank" rel="noopener noreferrer" aria-label="Ouvrir le teaser en plein écran (100%)">
           <div class="teaser-box">
-            <iframe
-              title="Teaser SQWEEZY (FR)"
-              src="/FR%20TEASER%20DEF.pdf#toolbar=0&navpanes=0&scrollbar=0&view=Fit">
-            </iframe>
+<img src="./FLYER-FR.png" alt="flyer" width="100%" />
           </div>
         </a>
       </div>
@@ -659,6 +656,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
