--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
         <h3 style="margin-bottom:12px">Découvrez SQWEEZY en un clin d’œil !</h3>
         <a href="/FR%20TEASER%20DEF.pdf#zoom=100" target="_blank" rel="noopener noreferrer" aria-label="Ouvrir le teaser en plein écran (100%)">
           <div class="teaser-box">
-<img src="./FLYER-FR.png" alt="flyer" width="100%" />
+<img src="./FR FLYER-dimOk.png" alt="flyer" width="100%" />
           </div>
         </a>
       </div>
@@ -656,6 +656,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
