--- a/index.html
+++ b/index.html
@@ -442,9 +442,17 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 
 
     </div>
-      <div>
+      <div           style="
+            border: 0px solid #d7a279;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            justify-content: center;
+            gap: 20px;
+            align-content: flex-start;
+          ">
         <!-- Remplacer par une photo détourée .png -->
-        <img src="/squeezy-20.gif" alt="Photo du produit SQWEEZY" style="width:25%;border-radius:1px;border:1px solid #e5e7eb" />
+        <img src="/squeezy-20.gif" alt="Photo du produit SQWEEZY" style="border-radius: 1px; width: 250px" />
       </div>
 
    </section>
@@ -656,6 +664,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
