--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 
 
     </div>
-      <div           style="
+     <div
+          style="
             border: 0px solid #d7a279;
             display: flex;
             align-items: center;
@@ -450,10 +451,17 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
             justify-content: center;
             gap: 20px;
             align-content: flex-start;
-          ">
-        <!-- Remplacer par une photo détourée .png -->
-        <img src="/squeezy-20.gif" alt="Photo du produit SQWEEZY" style="border-radius: 1px; width: 250px" />
-      </div>
+          "
+        >
+          <!-- Remplacer par une photo détourée .png -->
+        <div style="border: 0px solid">
+            <img
+              src="./animated-squeezy.gif"
+              alt="Photo du produit SQWEEZY"
+              style="border-radius: 1px; width: 250px"
+            />
+          </div>
+        </div>
 
    </section>
 
@@ -664,6 +672,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
