--- a/index.html
+++ b/index.html
@@ -448,17 +448,24 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
             display: flex;
             align-items: center;
             flex-direction: row;
-            justify-content: center;
+            justify-content: flext-start;
             gap: 20px;
             align-content: flex-start;
           "
         >
           <!-- Remplacer par une photo détourée .png -->
-        <div style="border: 0px solid">
+          <div style="border: 0px solid">
             <img
-              src="./animated-squeezy.gif"
+              src="./SQWEEZY-blk.png"
               alt="Photo du produit SQWEEZY"
-              style="border-radius: 1px; width: 250px"
+              style="border-radius: 0px; width: 150px"
+            />
+          </div>
+          <div style="border: 0px solid">
+            <img
+              src="./squeezy-20.gif"
+              alt="Photo du produit SQWEEZY"
+              style="border-radius: 0px; width: 150px"
             />
           </div>
         </div>
@@ -672,6 +679,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
