click de l'ancien pdf en commentaires

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
       <!-- FR -->
       <div class="lang-fr">
         <h3 style="margin-bottom:12px">Découvrez SQWEEZY en un clin d’œil !</h3>
-        <a href="/FR%20TEASER%20DEF.pdf#zoom=100" target="_blank" rel="noopener noreferrer" aria-label="Ouvrir le teaser en plein écran (100%)">
+        <!--a href="/FR%20TEASER%20DEF.pdf#zoom=100" target="_blank" rel="noopener noreferrer" aria-label="Ouvrir le teaser en plein écran (100%)"-->
           <div class="teaser-box">
 <img src="./FR FLYER-dimOk.png" alt="flyer" width="100%" />
           </div>
@@ -522,7 +522,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
       <!-- EN -->
       <div class="lang-en">
         <h3 style="margin-bottom:12px">Discover SQWEEZY at a glance!</h3>
-        <a href="/EN%20TEASER%20DEF.pdf#zoom=100" target="_blank" rel="noopener noreferrer" aria-label="Open teaser full-screen (100%)">
+        <!--a href="/EN%20TEASER%20DEF.pdf#zoom=100" target="_blank" rel="noopener noreferrer" aria-label="Open teaser full-screen (100%)"-->
           <div class="teaser-box">
             <iframe
               title="SQWEEZY Teaser (EN)"
@@ -679,6 +679,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
