--- a/index.html
+++ b/index.html
@@ -524,21 +524,9 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 
         <h3 style="margin-bottom:12px">Discover SQWEEZY at a glance!</h3>
 
-        <a href="/EN%20TEASER%20DEF.pdf#zoom=100" target="_blank" rel="noopener noreferrer" aria-label="Open teaser full-screen (100%)">
-
-          <div class="teaser-box">
-
-            <iframe
-
-              title="SQWEEZY Teaser (EN)"
-
-              src="/EN%20TEASER%20DEF.pdf#toolbar=0&navpanes=0&scrollbar=0&view=Fit">
-
-            </iframe>
-
-          </div>
-
-        </a>
+                <div class="teaser-box">
+                <img src="./EN FLYER-dimOk.png" alt="flyer" width="100%" />
+                </div>
 
       </div>
 
@@ -690,6 +678,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
