last SQWEEZY gif and png

--- a/index.html
+++ b/index.html
@@ -456,14 +456,14 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
           <!-- Remplacer par une photo détourée .png -->
           <div style="border: 0px solid">
             <img
-              src="./SQWEEZY-blk.png"
+              src="./SQWEEZY NEW.png"
               alt="Photo du produit SQWEEZY"
               style="border-radius: 0px; width: 150px"
             />
           </div>
           <div style="border: 0px solid">
             <img
-              src="./squeezy-20.gif"
+              src="./SQWEEZY GIF NOIR5.gif"
               alt="Photo du produit SQWEEZY"
               style="border-radius: 0px; width: 150px"
             />
@@ -678,6 +678,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
