--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
         <h3 style="margin-bottom:12px">Découvrez SQWEEZY en un clin d’œil !</h3>
        
           <div class="teaser-box">
-<img src="./FR FLYER-dimOk.png" alt="flyer" width="100%" />
+<img src="./FR FLYER BONNE DIM.png" alt="flyer" width="100%" />
           </div>
 
       </div>
@@ -525,7 +525,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
         <h3 style="margin-bottom:12px">Discover SQWEEZY at a glance!</h3>
 
                 <div class="teaser-box">
-                <img src="./EN FLYER-dimOk.png" alt="flyer" width="100%" />
+                <img src="./EN FLYER BONNE DIM.png" alt="flyer" width="100%" />
                 </div>
 
       </div>
@@ -678,6 +678,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
 </script>
 </body>
 </html>
+
 
 
 
